--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "nuxt": "^3.11.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@mswjs/data": "^0.16.1",
     "autoprefixer": "^10.4.19",
+    "msw": "^2.3.1",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
