--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "nuxt": "^3.11.2",
+    "radix-vue": "^1.8.5",
+    "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
   },
@@ -21,6 +24,7 @@
     "@mswjs/data": "^0.16.1",
     "autoprefixer": "^10.4.19",
     "msw": "^2.3.1",
+    "nuxt": "^3.12.2",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
